Fix material tooltip spacing (#1391)
* Single line

* Fix transform styles. Remove impotent margins

--- a/src/theme/material/tooltip.m.css
+++ b/src/theme/material/tooltip.m.css
@@ -22,24 +22,21 @@
 	font-size: var(--mdc-theme-font-size-small);
 	line-height: calc(var(--mdc-tooltip-font-size) * 1.6);
 	z-index: var(--zindex-tooltip);
+	white-space: nowrap;
 }
 
 .bottom .content {
-	margin: var(--mdc-tooltip-spacing-regular) 0 0;
 	transform: translate(-50%, calc(100% + var(--mdc-tooltip-grid-base)));
 }
 
 .top .content {
-	margin: 0 0 var(--mdc-tooltip-spacing-regular);
 	transform: translate(-50%, calc(-100% - var(--mdc-tooltip-grid-base)));
 }
 
 .left .content {
-	margin: 0 var(--mdc-tooltip-spacing-regular) 0 0;
 	transform: translate(calc(-100% - var(--mdc-tooltip-grid-base)), -50%);
 }
 
 .right .content {
-	margin: 0 0 0 var(--mdc-tooltip-spacing-regular);
 	transform: translate(calc(100% + var(--mdc-tooltip-grid-base)), -50%);
 }
